# sfSnake

./: CMakeLists.txt  ColorDefs.h  Game.cpp  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  Map.cpp  Map.h  MenuScreen.cpp  MenuScreen.h  README.md  SettingsScreen.cpp  Snake.cpp  Snake.h  SnakeNode.cpp  SnakeNode.h
src/: AutoSnake.cpp  AutoSnake.h  Fruit.cpp  Fruit.h  Game.cpp  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  MenuScreen.cpp  SettingsScreen.cpp  SettingsScreen.h  Snake.cpp  Snake.h  SnakeNode.cpp  SnakeNode.h
